# DOING-PENPROJ_sitl

crazyswarm2/crazyflie/config/: config.rviz  crazyflies.yaml  motion_capture.yaml
crazyswarm2/crazyflie/launch/: launch.py
crazyswarm2/crazyflie/src/: crazyflie_server.cpp
crazyswarm2/crazyflie_examples/: setup.cfg
crazyswarm2/crazyflie_examples/crazyflie_examples/: goto_subscriber.py  hello_world.py  nice_hover.py
px4_visual/: CMakeLists.txt  package.xml
px4_visual/config/: config.rviz
px4_visual/launch/: launch.py
px4_visual/models/: model.urdf
px4_visual/src/: px4_player.cpp  px4_rviz.cpp
test_pkg/: CMakeLists.txt  package.xml
test_pkg/bag/: log_0528_231217.csv  log_0528_231238.csv  log_0528_231258.csv  log_0528_231525.csv  log_0528_232118.csv  log_0528_232455.csv  log_0528_232523.csv  log_0528_233111.csv  log_0528_234050.csv
test_pkg/config/: config.rviz  config.yaml  default.rviz
test_pkg/launch/: debug.py  launch.py  replay.py
test_pkg/models/: model.urdf
test_pkg/src/: cf_communicator.cpp  cf_communicator_sim.cpp  data_logging.cpp  su_fkik.cpp  su_rviz.cpp  trajectory_generator.cpp  wrench_bridge.cpp  wrench_observer.cpp
test_pkg/src/for_px4/: px4_player.cpp  px4_rviz.cpp
